--- a/scss/user-card.scss
+++ b/scss/user-card.scss
@@ -263,6 +263,7 @@
     width: max-content;
     text-align: right;
     font-size: var(--font-down-2);
+    color: var(--primary);
   }
   &__user-content {
     width: auto;
