--- a/scss/user-card.scss
+++ b/scss/user-card.scss
@@ -158,7 +158,7 @@
   &__avatar {
     height: 50px;
   }
-  &__id div:has(.avatar-flair) {
+  &__id .d-user-card__avatar + div {
     position: relative;
     margin-right: 1em;
   }
@@ -185,7 +185,6 @@
     font-size: var(--font-up-4);
   }
   &__avatar img {
-    background-color: var(--secondary);
     width: 100px;
     height: 100px;
     border-radius: 50%;
