--- a/scss/user-card.scss
+++ b/scss/user-card.scss
@@ -158,7 +158,7 @@
   &__avatar {
     height: 50px;
   }
-  &__id div:has(.avatar-flair) {
+  &__id .d-user-card__avatar + div {
     position: relative;
     margin-right: 1em;
   }
@@ -185,7 +185,6 @@
     font-size: var(--font-up-4);
   }
   &__avatar img {
-    background-color: var(--secondary);
     width: 100px;
     height: 100px;
     border-radius: 50%;
@@ -302,7 +301,7 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
-    font-size: var(--font-down-1);
+    font-size: var(--font-0);
   }
   &__bio-excerpt img.emoji:not(.only-emoji) {
     height: var(--font-0);
@@ -315,7 +314,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    font-size: var(--font-down-2);
+    font-size: var(--font-down-1);
     margin-bottom: 0.75em;
   }
   &__custom-field-title {
@@ -407,7 +406,6 @@
     flex-grow: 1;
     cursor: pointer;
     transition: all 0.25s;
-    gap: 0.5em;
     border-radius: 4px;
     margin: 0;
   }
@@ -423,7 +421,6 @@
     flex-grow: 1;
     cursor: pointer;
     transition: all 0.25s;
-    gap: 0.5em;
     border-radius: 4px;
     margin: 0;
   }
@@ -504,6 +501,9 @@
   .d-user-card {
     width: 95vw;
     margin: 0 2.5vw;
+    &__controls {
+      flex-direction: column;
+    }
     &__main-content {
       flex-direction: column;
       padding: 0.5em;
