--- a/scss/user-card.scss
+++ b/scss/user-card.scss
@@ -334,6 +334,7 @@
     padding: 3px 5px;
     display: flex;
     border-radius: 5px;
+    align-items: center;
   }
   &__meta-data {
     display: flex;
