--- a/scss/user-card.scss
+++ b/scss/user-card.scss
@@ -205,7 +205,7 @@
     gap: 0.25em;
     color: var(--primary);
     flex: 1 1;
-    max-width: calc(100% - 120px - 0.5em)
+    max-width: calc(100% - 120px - 0.5em);
   }
   &__id-titles:visited {
     color: var(--primary);
@@ -249,7 +249,7 @@
     flex-direction: row;
     align-items: center;
     width: min-content;
-    background-color: rgba(var(--secondary-rgb),0.5);
+    background-color: rgba(var(--secondary-rgb), 0.5);
     padding: 6px;
     border-radius: 4px;
     gap: 0.5em;
@@ -472,7 +472,12 @@
   animation-name: placeHolderShimmer;
   animation-timing-function: linear;
   background: var(--primary-very-low);
-  background: linear-gradient(to right, var(--primary-very-low) 10%, var(--primary-low) 18%, var(--primary-very-low) 33%);
+  background: linear-gradient(
+    to right,
+    var(--primary-very-low) 10%,
+    var(--primary-low) 18%,
+    var(--primary-very-low) 33%
+  );
 }
 
 .d-user-card__avatar.d-user-card__placeholder-animation {
@@ -536,7 +541,7 @@ body:not(.staff) {
     display: none;
   }
   &:hover {
-  background-color: rgba(var(--secondary-rgb), 1);
+    background-color: rgba(var(--secondary-rgb), 1);
   }
 }
 
