--- a/javascripts/discourse/templates/components/user-card-contents.hbs
+++ b/javascripts/discourse/templates/components/user-card-contents.hbs
@@ -1,7 +1,7 @@
 {{#if this.visible}}
   <PluginOutlet
     @name="before-user-card-content"
-    @args={{hash user=this.user}}
+    @outletArgs={{hash user=this.user}}
   />
   {{#if this.loading}}
     <div class="d-user-card__header d-user-card__placeholder-animation">
@@ -97,12 +97,13 @@
           {{else}}
             <UserAvatarFlair @user={{this.user}} />
           {{/if}}
-          <PluginOutlet
-            @name="user-card-avatar-flair"
-            @connectorTagName="div"
-            @args={{hash user=this.user}}
-            @tagName="div"
-          />
+          <div>
+            <PluginOutlet
+              @name="user-card-avatar-flair"
+              @connectorTagName="div"
+              @outletArgs={{hash user=this.user}}
+            />
+          </div>
           <div class="d-user-card__id-titles">
             <div class="d-user-card__titles-top">
               <h1
@@ -141,12 +142,13 @@
               {{#if this.user.staged}}
                 <span class="staged">{{i18n "user.staged"}}</span>
               {{/if}}
-              <PluginOutlet
-                @name="user-card-post-names"
-                @connectorTagName="div"
-                @args={{hash user=this.user}}
-                @tagName="div"
-              />
+              <div>
+                <PluginOutlet
+                  @name="user-card-post-names"
+                  @connectorTagName="div"
+                  @outletArgs={{hash user=this.user}}
+                />
+              </div>
             </div>
             <div class="d-user-card__titles-bottom">
               {{#if this.nameFirst}}
@@ -274,7 +276,7 @@
                 <PluginOutlet
                   @name="user-card-metadata"
                   @connectorTagName="div"
-                  @args={{hash user=this.user}}
+                  @outletArgs={{hash user=this.user}}
                 />
                 {{#if this.publicUserFields}}
                   {{#each this.publicUserFields as |uf|}}
@@ -303,7 +305,7 @@
           <PluginOutlet
             @name="user-card-after-metadata"
             @connectorTagName="div"
-            @args={{hash user=this.user}}
+            @outletArgs={{hash user=this.user}}
           />
           <div class="d-user-card__meta-data">
             {{#if this.user.website_name}}
@@ -329,12 +331,13 @@
                   leaveAgo="true"
                 }}</span>
             </div>
-            <PluginOutlet
-              @name="user-card-location-and-website"
-              @tagName="span"
-              @connectorTagName="div"
-              @args={{hash user=this.user}}
-            />
+            <span>
+              <PluginOutlet
+                @name="user-card-location-and-website"
+                @connectorTagName="div"
+                @outletArgs={{hash user=this.user}}
+              />
+            </span>
           </div>
         </div>
       </div>
@@ -361,8 +364,7 @@
             <PluginOutlet
               @name="user-card-below-message-button"
               @connectorTagName="li"
-              @args={{hash user=this.user close=(action "close")}}
-              @tagName=""
+              @outletArgs={{hash user=this.user close=(action "close")}}
             />
             {{#if this.showFilter}}
               <li class="d-user-card__action">
@@ -398,14 +400,13 @@
             <PluginOutlet
               @name="user-card-additional-buttons"
               @connectorTagName="li"
-              @args={{hash user=this.user close=(action "close")}}
-              @tagName=""
+              @outletArgs={{hash user=this.user close=(action "close")}}
             />
           </ul>
           <PluginOutlet
             @name="user-card-additional-controls"
             @connectorTagName="div"
-            @args={{hash user=this.user close=(action "close")}}
+            @outletArgs={{hash user=this.user close=(action "close")}}
           />
         </div>
       {{/if}}
