--- a/scss/user-card.scss
+++ b/scss/user-card.scss
@@ -31,9 +31,10 @@
   background-color: var(--secondary);
   background-size: cover;
   background-position: 50% 50%;
+  overflow: hidden;
   &__header {
     width: calc(100% - 1em);
-    height: 100px;
+    height: 75px;
     padding: 0.5em;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
@@ -43,8 +44,8 @@
     justify-content: space-between;
   }
   &__header.avatar-background {
-    backdrop-filter: blur(100px);
-    -webkit-backdrop-filter: blur(50px);
+    backdrop-filter: blur(30px);
+    -webkit-backdrop-filter: blur(30px);
   }
   &__badges {
     display: flex;
@@ -125,13 +126,14 @@
     --fa-secondary-opacity: 1;
   }
   &__main-content {
-    padding: 0.5em 1em 1em 1em;
+    padding: 0 5px 5px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: var(--secondary);
-    border-bottom-right-radius: 5px;
-    border-bottom-left-radius: 5px;
+  }
+  &__header.avatar-background + .d-user-card__main-content {
+    backdrop-filter: blur(30px);
+    -webkit-backdrop-filter: blur(30px);
   }
   &__main-content-top {
     display: flex;
@@ -139,6 +141,10 @@
     justify-content: space-between;
     align-content: center;
     flex: 1 1 min-content;
+    padding: 0.5em;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    background-color: var(--secondary);
   }
   &__main-content-bottom {
     flex: 1 1 auto;
@@ -147,7 +153,10 @@
     justify-content: space-between;
     align-items: flex-end;
     gap: 1em;
-    margin-top: 1em;
+    background-color: var(--secondary);
+    padding: 0 0.5em 0.5em;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
   }
   &__id {
     display: flex;
@@ -326,11 +335,9 @@
   }
   &__custom-field-group {
     display: flex;
-    gap: 0.5em;
     flex-wrap: wrap;
   }
   &__field {
-    background-color: var(--primary-200);
     padding: 3px 5px;
     display: flex;
     border-radius: 5px;
@@ -448,8 +455,7 @@
 }
 
 .user-card-metadata-outlet h3 {
-  font-weight: bold;
-  background-color: var(--primary-200);
+
   padding: 3px 5px;
   display: flex;
   border-radius: 5px;
