--- a/scss/user-card.scss
+++ b/scss/user-card.scss
@@ -128,10 +128,14 @@
     --fa-secondary-opacity: 1;
   }
   &__main-content {
-    padding: 0 5px 5px;
+    margin: 0 5px 5px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    border-radius: 5px;
+    background-color: var(--secondary);
+    padding: 0.5em;
+    box-shadow: 0px 0px 0px 2px rgba(var(--primary-rgb),0.25);
   }
   &__main-content-top {
     display: flex;
@@ -139,10 +143,6 @@
     justify-content: space-between;
     align-content: center;
     flex: 1 1 min-content;
-    padding: 0.5em;
-    border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
-    background-color: var(--secondary);
   }
   &__main-content-bottom {
     flex: 1 1 auto;
@@ -151,10 +151,7 @@
     justify-content: space-between;
     align-items: flex-end;
     gap: 1em;
-    background-color: var(--secondary);
-    padding: 0 0.5em 0.5em;
-    border-bottom-right-radius: 5px;
-    border-bottom-left-radius: 5px;
+    margin: 0.5em 0 0 0;
   }
   &__id {
     display: flex;
